kubernetes_deployment/prometheus/alertmanager_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: prometheus
spec:
  defaultBackend:
    service:
      name: prometheus-alertmanager
      port:
        number: 9093
  ingressClassName: tailscale
  tls:
    - hosts:
        - alertmanager
